[tool.poetry]
name = "live-coding"
version = "0.1.0"
description = ""
authors = ["TakahiroHirata <takakun47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
FoxDot = "^0.8.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
